--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -91,23 +91,13 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="57dp"
-        android:layout_height="120dp" />
+        android:layout_height="65dp" />
 
     <ImageView
         android:id="@+id/imageView3"
         android:layout_width="264dp"
         android:layout_height="73dp"
         tools:srcCompat="@tools:sample/avatars" />
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="61dp">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" />
-    </ScrollView>
 
     <Button
         android:id="@+id/Enviar"
@@ -120,5 +110,19 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="MOSTRAR" />
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="152dp"
+        android:layout_height="48dp" />
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="47dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" />
+    </ScrollView>
 
 </LinearLayout>
